--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
+    <string name="title"></string>
     <string name="app_name">gallery</string>
+    <string name="load_new">Поиск в Flickr</string>
+    <string name="load_recent">Вернуться на начальную страницу</string>
+    <string name="load_gallery">Сохранённые фотографии</string>
 </resources>
